# MLOps-End-to-End

./: .gitignore  Dockerfile.airflow  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yaml
airflow/dags/: training_prediction.py
experiments/: experiments.ipynb
src/DimondPricePrediction/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/DimondPricePrediction/exception/: exception.py
src/DimondPricePrediction/logger/: logging.py
src/DimondPricePrediction/pipelines/: training_pipeline.py
src/DimondPricePrediction/utils/: utils.py
src/dimond_price_prediction/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/dimond_price_prediction/pipelines/: prediction_pipeline.py  training_pipeline.py
src/dimond_price_prediction/utils/: utils.py
