[tool.poetry]
name = "mlops end to end project"
version = "0.1.0"
description = "This project is about the end to end project of MLOps."
authors = ["dhirajpoddar <dhirajpodar@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"
flask = "^3.0.3"
mlflow = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
